<resources>
    <string name="app_name">BlockChainApp</string>
    <string name="myName">Kevin F. Carrillo</string>
    <string name="appDescription">Inicia una nueva aventura con BlockChainApp y descubre una nueva forma de ver el mundo.</string>
    <string name="beginButtonText">Comienza</string>
    <string name="registrate">Registrate</string>
    <string name="textoInicioSesion">La aventura está por iniciar, por favor inicia sesión\n</string>
    <string name="textoBotonLogin">Ingresar\n</string>
    <string name="recuperarPassword">Recupera tu contraseña</string>
    <string name="noTienesCuenta">No tienes cuenta? Regístrate</string>
    <string name="loginGoogle">Ingresa con Google</string>
    <string name="descripcionLogo">logo</string>
    <string name="descripcionIconos">iconos usuario y contrasena</string>
    <string name="textoUsuario">Usuario</string>
    <string name="claveHint">Contraseña</string>
    <string name="crear_cuenta">Crea una cuenta</string>
    <string name="hint_nombre">nombre</string>
    <string name="hint_apellido">apellidos</string>
    <string name="hint_anio_nacimiento">Fecha de nacimiento</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_clave">Contraseña</string>
    <string name="textoBotonRegister">Registrarse</string>
    <string name="ya_tengo_cuenta">ya tengo una cuenta</string>
    <string name="anio_nacimiento_label">Fecha de nacimiento</string>
    <string name="usuario_label">Nombre de usuario:</string>
    <string name="recuperarPassword_subtitle">ingresa tu usuario</string>
    <string name="enviar_recuperacion">Recuperar contraseña</string>
    <string name="anio">1999</string>
    <string name="nombre_apellido">Nombre Apellido</string>
    <string name="usuario">usuarioEjemplo@gmail.com\n</string>
    <string name="confirmarClave">Confirma contraseña</string>
</resources>