<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center">


            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="112dp"
                android:layout_height="125dp"
                android:contentDescription="@string/descripcionLogo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/agbalumo"
                android:paddingStart="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <TextView
            android:id="@+id/textRegisterTitle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fontFamily="@font/actor"
            android:text="@string/crear_cuenta"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp">


        <EditText
                android:id="@+id/registerName"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_nombre"
                android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <EditText
                android:id="@+id/registerLastName"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_apellido"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


            <EditText
                android:id="@+id/registerUser"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_usuario"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_clave"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <EditText
                android:id="@+id/registerConfirmPassword"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/confirmarClave"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:maxLength="4"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="76dp"
            android:backgroundTint="@color/white"
            android:text="@string/textoBotonRegister"
            android:textColor="@color/borders_color"
            android:textSize="30sp"
            app:strokeColor="@color/borders_color"
            app:strokeWidth="3dp" />

        <TextView
            android:id="@+id/textAlreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/ya_tengo_cuenta"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
