<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="112dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descripcionLogo"
        app:layout_constraintEnd_toStartOf="@+id/textAppName"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRegisterTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/actor"
        android:text="@string/crear_cuenta"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAppName"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textRegisterTitle"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_apellido"
        android:inputType="textPersonName"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNombre"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextAnioNacimiento"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_anio_nacimiento"
        android:inputType="number"
        android:maxLength="4"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextApellido"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextUsuarioRegister"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_usuario"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAnioNacimiento"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextPasswordRegister"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/hint_clave"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsuarioRegister"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/white"
        android:text="@string/textoBotonRegister"
        android:textColor="@color/borders_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordRegister"
        app:strokeColor="@color/borders_color"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/textAlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/ya_tengo_cuenta"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintVertical_bias="0.094" />

</androidx.constraintlayout.widget.ConstraintLayout>
