<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="278dp"
        android:layout_height="86dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/descripcionLogin"
        android:layout_width="347dp"
        android:layout_height="105dp"
        android:fontFamily="@font/actor"
        android:text="@string/textoInicioSesion"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        app:layout_constraintVertical_bias="0.458" />

    <TextView
        android:id="@+id/recuperaClave"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/actor"
        android:text="@string/recuperarPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/iconosLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/white"
        android:text="@string/textoBotonLogin"
        android:textColor="@color/borders_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconosLogin"
        app:layout_constraintVertical_bias="0.159"
        app:strokeColor="@color/borders_color"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLoginGoogle"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginBottom="112dp"
        android:fontFamily="serif"
        android:text="@string/loginGoogle"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="@color/white"
        app:icon="@drawable/googleicono"
        app:iconPadding="0dp"
        app:iconSize="30dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/registrateLink"
        android:layout_width="339dp"
        android:layout_height="30dp"
        android:fontFamily="serif"
        android:text="@string/noTienesCuenta"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginGoogle"
        app:layout_constraintVertical_bias="0.087" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="112dp"
        android:layout_height="125dp"
        android:contentDescription="@string/descripcionLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/textoUsuario"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toEndOf="@+id/iconosLogin"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="245dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/claveHint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:shadowColor="#040404"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/iconosLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:strokeColor="@color/borders_color"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/iconosLogin"
        android:layout_width="63dp"
        android:layout_height="125dp"
        android:contentDescription="@string/descripcionIconos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcionLogin"
        app:layout_constraintVertical_bias="0.116"
        app:srcCompat="@drawable/iconoslogin" />


</androidx.constraintlayout.widget.ConstraintLayout>